fixed nav btn align

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,7 @@
 .myIcon {
   height: 24px;
 }
+
+.email-btn {
+  min-width: min-content;
+}
